--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
 							            <li><a href="game4.html" class="button">詳細を見る</a></li>
 							        </ul>
 							    </article>
+
+								<article>
+							        <header class="major">
+							            <h2><a href="game6.html">Fox UP</a></h2>
+										<p>Unityで初制作</p>
+							        </header>
+							        <a href="game6.html" class="image fit"><img src="images/FoxImage.jpg" alt="" /></a>
+							        <p>
+									  	下から迫りくる水に溺れないよう、ジャンプを駆使して<br>
+							            一番上のゴールを目指すアクションゲームです。
+									</p>
+							        <ul class="actions special">
+							            <li><a href="game6.html" class="button">詳細を見る</a></li>
+							        </ul>
+							    </article>
+								
 								<article>
 							        <header class="major">
 							            <h2><a href="game5.html">Star Run</a></h2>
@@ -139,26 +155,13 @@
 							            <li><a href="game5.html" class="button">詳細を見る</a></li>
 							        </ul>
 							    </article>
-								<article>
-							        <header class="major">
-							            <h2><a href="game6.html">Fox UP</a></h2>
-										<p>Unityで初制作</p>
-							        </header>
-							        <a href="game6.html" class="image fit"><img src="images/FoxImage.jpg" alt="" /></a>
-							        <p>
-									  	下から迫りくる水に溺れないよう、ジャンプを駆使して<br>
-							            一番上のゴールを目指すアクションゲームです。
-									</p>
-							        <ul class="actions special">
-							            <li><a href="game6.html" class="button">詳細を見る</a></li>
-							        </ul>
-							    </article>
+								
 								<article>
 							        <header class="major">
 							            <h2><a href="game7.html">ループダンジョン</a></h2>
 										<p>JavaScriptで制作</p>
 							        </header>
-							        <a href="game7.html" class="image fit"><img src="images/LoopImage.jpg" alt="" /></a>
+							        <a href="game7.html" class="image fit"><img src="images/LoopImage.png" alt="" /></a>
 							        <p>
 									  	ランダム生成されるダンジョンを探索しながら<br>
     									フロアの踏破を目指すローグライク風2Dダンジョンゲームです
@@ -266,6 +269,7 @@
 	</body>
 
 </html>
+
 
 
 
