--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">制作作品</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li><a href="generic.html">自己紹介</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -171,8 +171,10 @@
 							        </ul>
 							    </article>
 							</section>
-
-						<!-- Footer -->
+						
+					<!-- Footer -->
+						<!--
+						
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
@@ -186,6 +188,7 @@
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
+								-->
 
 					</div>
 
@@ -269,6 +272,7 @@
 	</body>
 
 </html>
+
 
 
 
