--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">制作作品</a></li>
 							<li><a href="generic.html">自己紹介</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+						<!--	<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
 							<!--
@@ -276,6 +276,7 @@
 	</body>
 
 </html>
+
 
 
 
