--- a/generic.html
+++ b/generic.html
@@ -93,13 +93,22 @@
         <div class="swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="images/GOOOOLEM1.png" alt="Title">
+                    <img src="images/t1.jpg" alt="Title">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/GOOOOLEM2.png" alt="FEVER">
+                    <img src="images/t2.jpg" alt="FEVER">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/GOOOOLEM3.png" alt="妨害">
+                    <img src="images/t3.jpg" alt="妨害">
+                </div>
+				<div class="swiper-slide">
+                    <img src="images/t4.jpg" alt="Title">
+                </div>
+                <div class="swiper-slide">
+                    <img src="images/t5.jpg" alt="FEVER">
+                </div>
+                <div class="swiper-slide">
+                    <img src="images/t6.jpg" alt="妨害">
                 </div>
             </div>
 
@@ -145,4 +154,5 @@
 
 </body>
 </html>
+
 
