--- a/generic.html
+++ b/generic.html
@@ -99,16 +99,16 @@
                     <img src="images/t2.jpg" alt="FEVER">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/t3.jpg" alt="妨害">
+                    <img src="images/t3.JPG" alt="妨害">
                 </div>
 				<div class="swiper-slide">
-                    <img src="images/t4.jpg" alt="Title">
+                    <img src="images/t4.JPG" alt="Title">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/t5.jpg" alt="FEVER">
+                    <img src="images/t5.JPG" alt="FEVER">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/t6.jpg" alt="妨害">
+                    <img src="images/t6.JPG" alt="妨害">
                 </div>
             </div>
 
@@ -154,5 +154,6 @@
 
 </body>
 </html>
+
 
 
